updated gitignore for VS2015

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,10 @@ Build/*
 *.vsdoc
 TestResult.xml
 *.DotSettings
+
+# Visual Studio 2015 cache/options directory
+.vs/
+
+# DNX
+project.lock.json
+artifacts/
