--- a/src/app/MediaLogue.Infrastructure/MediaLogue.Infrastructure.csproj
+++ b/src/app/MediaLogue.Infrastructure/MediaLogue.Infrastructure.csproj
@@ -40,7 +40,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\Tvdb\BadResponseException.cs" />
+    <Compile Include="Data\Tvdb\IWebClient.cs" />
+    <Compile Include="Data\Tvdb\ServerNotAvailableException.cs" />
+    <Compile Include="Data\Tvdb\TvdbGateway.cs" />
+    <Compile Include="Data\Tvdb\AsyncClient.cs" />
+    <Compile Include="Data\Tvdb\TvdbMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MediaLogue.Core\MediaLogue.Core.csproj">
+      <Project>{DBD749D5-4A7C-41FB-BF8C-648BF2992FA8}</Project>
+      <Name>MediaLogue.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
