--- a/src/specs/Specs.Integration.MediaLogue/Specs.Integration.MediaLogue.csproj
+++ b/src/specs/Specs.Integration.MediaLogue/Specs.Integration.MediaLogue.csproj
@@ -67,10 +67,21 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Infrastructure\Data\Tvdb\TvdbGatewayTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\app\MediaLogue.Core\MediaLogue.Core.csproj">
+      <Project>{DBD749D5-4A7C-41FB-BF8C-648BF2992FA8}</Project>
+      <Name>MediaLogue.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\app\MediaLogue.Infrastructure\MediaLogue.Infrastructure.csproj">
+      <Project>{57B2109C-080D-4E54-8165-40C2AC3DFF7C}</Project>
+      <Name>MediaLogue.Infrastructure</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
