--- a/src/app/MediaLogue.Api.Core/packages.config
+++ b/src/app/MediaLogue.Api.Core/packages.config
@@ -1,9 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="3.5.0" targetFramework="net452" userInstalled="true" />
+  <package id="Autofac" version="3.5.2" targetFramework="net452" />
   <package id="Autofac.WebApi2" version="3.4.0" targetFramework="net452" userInstalled="true" />
-  <package id="CommonServiceLocator" version="1.3" targetFramework="net452" userInstalled="true" />
-  <package id="MediatR" version="1.0.0.0" targetFramework="net452" userInstalled="true" />
+  <package id="MediatR" version="2.0.0-beta-004" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" userInstalled="true" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" userInstalled="true" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" userInstalled="true" />
