--- a/src/app/MediaLogue.Api.Core/MediaLogue.Api.Core.csproj
+++ b/src/app/MediaLogue.Api.Core/MediaLogue.Api.Core.csproj
@@ -73,6 +73,8 @@
     <Compile Include="Config\Modules\InfrastructureModule.cs" />
     <Compile Include="Config\Modules\MediatrModule.cs" />
     <Compile Include="Controllers\TvdbController.cs" />
+    <Compile Include="Features\Tvdb\GetTvdbShowQuery.cs" />
+    <Compile Include="Features\Tvdb\GetTvdbShowQueryHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -80,10 +82,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MediaLogue.Application\MediaLogue.Application.csproj">
-      <Project>{4286450D-567C-49E0-8FBC-73318769E275}</Project>
-      <Name>MediaLogue.Application</Name>
-    </ProjectReference>
     <ProjectReference Include="..\MediaLogue.Core\MediaLogue.Domain.csproj">
       <Project>{DBD749D5-4A7C-41FB-BF8C-648BF2992FA8}</Project>
       <Name>MediaLogue.Domain</Name>
