--- a/src/specs/Specs.Integration.MediaLogue/packages.config
+++ b/src/specs/Specs.Integration.MediaLogue/packages.config
@@ -1,9 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ApprovalTests" version="1.1.0" targetFramework="net452" userInstalled="true" />
+  <package id="Autofac" version="3.5.2" targetFramework="net452" userInstalled="true" />
   <package id="FluentAssertions" version="3.3.0" targetFramework="net452" userInstalled="true" />
-  <package id="Specify" version="0.8.76" targetFramework="net452" userInstalled="true" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" userInstalled="true" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" userInstalled="true" />
+  <package id="Mono.Cecil" version="0.9.4" targetFramework="net452" userInstalled="true" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" userInstalled="true" />
+  <package id="Specify" version="0.8.82" targetFramework="net452" userInstalled="true" />
   <package id="TestStack.BDDfy" version="4.1.2" targetFramework="net452" userInstalled="true" />
-  <package id="xunit.abstractions" version="2.0.0" targetFramework="net452" userInstalled="true" />
-  <package id="xunit.core" version="2.0.0" targetFramework="net452" userInstalled="true" />
-  <package id="xunit.extensibility.core" version="2.0.0" targetFramework="net452" userInstalled="true" />
+  <package id="TestStack.ConventionTests" version="2.2.1" targetFramework="net452" userInstalled="true" />
+  <package id="TestStack.ConventionTests.Autofac" version="2.2.1" targetFramework="net452" userInstalled="true" />
 </packages>
