--- a/src/specs/Specs.System.MediaLogue/Specs.System.MediaLogue.csproj
+++ b/src/specs/Specs.System.MediaLogue/Specs.System.MediaLogue.csproj
@@ -38,8 +38,8 @@
       <HintPath>..\..\packages\FluentAssertions.3.3.0\lib\net45\FluentAssertions.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Specify, Version=0.8.76.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Specify.0.8.76\lib\Specify.dll</HintPath>
+    <Reference Include="Specify, Version=0.8.82.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Specify.0.8.82\lib\Specify.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpecifyConfig.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
