--- a/src/app/MediaLogue.Api.WebHost/Web.config
+++ b/src/app/MediaLogue.Api.WebHost/Web.config
@@ -4,6 +4,12 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <appSettings>
+    <add key="endpoint" value="enter the URI from the Keys blade of the Azure Preview portal" />
+    <add key="authKey" value="enter the PRIMARY KEY, or the SECONDARY KEY, from the Keys blade of the Azure  Preview portal" />
+    <add key="database" value="MediaLogueDB" />
+    <add key="collection" value="Shows" />
+  </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
