Moved to SQL with Entity Framework

--- a/src/app/MediaLogue.Api.WebHost/Web.config
+++ b/src/app/MediaLogue.Api.WebHost/Web.config
@@ -10,6 +10,11 @@
     <add key="database" value="MediaLogueDB" />
     <add key="collection" value="Shows" />
   </appSettings>
+  <connectionStrings>
+    <add name="MediaLogueContext"
+        connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\MediaLogueDB.mdf;Integrated Security=True;"
+        providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
