--- a/src/app/MediaLogue.Api.Core/packages.config
+++ b/src/app/MediaLogue.Api.Core/packages.config
@@ -2,10 +2,10 @@
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net452" userInstalled="true" />
   <package id="Autofac.WebApi2" version="3.4.0" targetFramework="net452" userInstalled="true" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="MediatR" version="2.0.0-beta-004" targetFramework="net452" userInstalled="true" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" userInstalled="true" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" userInstalled="true" />
-  <package id="Microsoft.Azure.DocumentDB" version="1.2.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" userInstalled="true" />
   <package id="Swashbuckle.Core" version="5.2.1" targetFramework="net452" userInstalled="true" />
   <package id="System.Runtime" version="4.0.20-beta-22816" targetFramework="net452" />
