--- a/src/app/MediaLogue.Api.WebHost/MediaLogue.Api.WebHost.csproj
+++ b/src/app/MediaLogue.Api.WebHost/MediaLogue.Api.WebHost.csproj
@@ -116,6 +116,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="App_Data\" />
     <Folder Include="App_Start\" />
   </ItemGroup>
   <PropertyGroup>
