--- a/src/app/MediaLogue.Domain/MediaLogue.Domain.csproj
+++ b/src/app/MediaLogue.Domain/MediaLogue.Domain.csproj
@@ -53,7 +53,9 @@
     <Compile Include="Services\TvdbService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Model\DomainModel.cd" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
