--- a/src/app/MediaLogue.Infrastructure/packages.config
+++ b/src/app/MediaLogue.Infrastructure/packages.config
@@ -1,5 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Azure.DocumentDB" version="1.2.0" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="5.0.7" targetFramework="net452" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
 </packages>
