--- a/src/specs/Specs.Integration.MediaLogue/app.config
+++ b/src/specs/Specs.Integration.MediaLogue/app.config
@@ -6,8 +6,8 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   
   <connectionStrings>
-    <add name="IntegrationSpecsContext" connectionString="Server=.;Database=MediaLogueDB-IntegrationSpecs;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
-     <add name="IntegrationSpecsContext-old" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|MediaLogueDB_IntegrationSpecs.mdf;Integrated Security=True;Database=MediaLogueDB_IntegrationSpecs" providerName="System.Data.SqlClient" />
+     <add name="MediaLogueConnectionStringLocal" connectionString="Server=.;Database=MediaLogueDB-IntegrationSpecs;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+     <add name="MediaLogueConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|MediaLogueDB_IntegrationSpecs.mdf;Integrated Security=True;Database=MediaLogueDB_IntegrationSpecs" providerName="System.Data.SqlClient" />
  </connectionStrings>
   
   <entityFramework>
