--- a/src/specs/Specs.Library.MediaLogue/Specs.Library.MediaLogue.csproj
+++ b/src/specs/Specs.Library.MediaLogue/Specs.Library.MediaLogue.csproj
@@ -39,6 +39,14 @@
       <HintPath>..\..\packages\Castle.Core.3.3.1\lib\net45\Castle.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -70,11 +78,17 @@
       <HintPath>..\..\packages\AutoFixture.3.20.0\lib\net40\Ploeh.AutoFixture.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Respawn, Version=0.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Respawn.0.1.0.0\lib\net45\Respawn.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Specify, Version=0.8.82.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Specify.0.8.82\lib\Specify.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -101,6 +115,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Ef\SetupDatabasePerAppDomain.cs" />
+    <Compile Include="Ef\SetupDatabasePerScenario.cs" />
     <Compile Include="Infrastructure\AssemblyTypeResolver.cs" />
     <Compile Include="Infrastructure\AutofacApplicationContainer.cs" />
     <Compile Include="Infrastructure\AutofacScenarioContainer.cs" />
@@ -134,11 +150,16 @@
       <Project>{DBD749D5-4A7C-41FB-BF8C-648BF2992FA8}</Project>
       <Name>MediaLogue.Domain</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\app\MediaLogue.Infrastructure\MediaLogue.Infrastructure.csproj">
+      <Project>{57B2109C-080D-4E54-8165-40C2AC3DFF7C}</Project>
+      <Name>MediaLogue.Infrastructure</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="TestData\Raw\TheFieldOfBlood_FullSeries.xml" />
     <EmbeddedResource Include="TestData\Raw\Turn_FullSeries.xml" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
