--- a/src/app/MediaLogue.Api.WebHost/Web.config
+++ b/src/app/MediaLogue.Api.WebHost/Web.config
@@ -11,9 +11,8 @@
     <add key="collection" value="Shows" />
   </appSettings>
   <connectionStrings>
-    <add name="MediaLogueContext"
-        connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\MediaLogueDB.mdf;Integrated Security=True;"
-        providerName="System.Data.SqlClient" />
+    <add name="MediaLogueConnectionStringLocal" connectionString="Server=.;Database=MediaLogueDB-IntegrationSpecs;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+    <add name="MediaLogueConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|MediaLogueDB_IntegrationSpecs.mdf;Integrated Security=True;Database=MediaLogueDB_IntegrationSpecs" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
