--- a/src/specs/Specs.Component.MediaLogue/app.config
+++ b/src/specs/Specs.Component.MediaLogue/app.config
@@ -1,5 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <appSettings>
+    <add key="BaseUrl" value="http://localhost/MediaLogue.Api.WebHost/"/>
+  </appSettings>
+  <connectionStrings>
+    <add name="MediaLogueConnectionStringLocal" connectionString="Server=.;Database=MediaLogueDB-IntegrationSpecs;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+    <add name="MediaLogueConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|MediaLogueDB_IntegrationSpecs.mdf;Integrated Security=True;Database=MediaLogueDB_IntegrationSpecs" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
