Fixed bug with TVDB NotFound responses

--- a/src/app/MediaLogue.Domain/MediaLogue.Domain.csproj
+++ b/src/app/MediaLogue.Domain/MediaLogue.Domain.csproj
@@ -52,6 +52,8 @@
     <Compile Include="Contracts\ITvdbGateway.cs" />
     <Compile Include="Contracts\ITvdbMapper.cs" />
     <Compile Include="Contracts\Services\ITvdbService.cs" />
+    <Compile Include="Exceptions\BadResponseException.cs" />
+    <Compile Include="Exceptions\ServerNotAvailableException.cs" />
     <Compile Include="Model\Actor.cs" />
     <Compile Include="Model\Banner.cs" />
     <Compile Include="Model\Entity.cs" />
