--- a/src/specs/Specs.Component.MediaLogue/app.config
+++ b/src/specs/Specs.Component.MediaLogue/app.config
@@ -1,13 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <appSettings>
-    <add key="BaseUrl" value="http://localhost/MediaLogue.Api.WebHost"/>
+    <add key="BaseUrl" value="http://localhost/MediaLogue.Api.WebHost" />
   </appSettings>
   <connectionStrings>
     <add name="MediaLogueConnectionStringLocal" connectionString="Server=.;Database=MediaLogueDB-IntegrationSpecs;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
     <add name="MediaLogueConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|MediaLogueDB_IntegrationSpecs.mdf;Integrated Security=True;Database=MediaLogueDB_IntegrationSpecs" providerName="System.Data.SqlClient" />
   </connectionStrings>
-
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -24,4 +27,14 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
