--- a/src/specs/Specs.Component.MediaLogue/packages.config
+++ b/src/specs/Specs.Component.MediaLogue/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net452" userInstalled="true" />
   <package id="AutoFixture" version="3.20.0" targetFramework="net452" userInstalled="true" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="FluentAssertions" version="3.3.0" targetFramework="net452" userInstalled="true" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" userInstalled="true" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" userInstalled="true" />
